adding location creation support
